--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.0",
     "@syncfusion/ej2-base": "^27.1.54",
+    "@syncfusion/ej2-react-lists": "^27.1.50",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "framer-motion": "^11.11.9",
     "lucide-react": "^0.453.0",
     "next": "14.2.15",
     "pg": "^8.13.0",
